# CG2016.2

./: #simple.glade#  2  CMakeLists.txt  Makefile  README.md  SGI_executavel  bezier_curve.cpp  bezier_curve.hpp  bezier_surface.cpp  bezier_surface.hpp  bspline.cpp  bspline.hpp  color.cpp  color.hpp  coordenadas.cpp  coordenadas.hpp  coordinates.cpp  coordinates.hpp  coordinates_3d.cpp  coordinates_3d.hpp  cor.cpp  cor.hpp  curve.cpp  curve.hpp  ddata.hpp  edge.cpp  edge.hpp  facet.cpp  facet.hpp  line.cpp  line.hpp  main.cpp  main_to_play.cpp  matrices.cpp  matrix1x4.cpp  matrix1x4.hpp  matrix4x1.cpp  matrix4x1.hpp  matrix4x4.cpp  matrix4x4.hpp  (+57 more)
core/: coordinates.cpp  drawing_edge.hpp  edge.hpp  main.cpp  world.hpp
objects/: bspline.cpp  bspline.hpp  curve.cpp  curve.hpp  line.cpp  line.hpp  object.cpp  object.hpp  point.cpp  point.hpp  surface.cpp  surface.hpp  window.cpp  window.hpp  wireframe.cpp  wireframe.hpp
utils/: color.cpp  drawing_edge.cpp  edge.cpp  matrices.cpp  matrix1x4.cpp  matrix1x4.hpp  operations.cpp  transformations.cpp  transformations.hpp
view/: simple.glade  ui.cpp  ui.hpp
